--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -39,7 +39,7 @@ header {
               transition-delay: 0ms;
             }
             #name {
-              clip-path: inset(-1px -1px -1px -1px);
+              clip-path: inset(-1px -1px -7px -1px);
               transform: translate(786px, 167px);
             }
             #role {
