--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -54,7 +54,9 @@
           padding: 0 var(--padding-smaller);
         }
         h1 {
+          position: relative;
           line-height: 120%;
+          left: -2px;
         }
         h1,
         p {
@@ -86,6 +88,9 @@
           animation: slowMoIn1 4000ms cubic-bezier(0.83, 0.01, 0.2, 1);
           animation-fill-mode: both;
           animation-delay: 300ms;
+          &.line1 {
+            margin-bottom: 6px;
+          }
           &.line2 {
             animation: slowMoIn2 4000ms cubic-bezier(0.83, 0.01, 0.2, 1);
             animation-fill-mode: both;
