--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -63,7 +63,7 @@ body {
   --padding-larger: 80px;
   --padding-huge: 128px;
   ::selection {
-    background: #ccc;
+    background: rgba(0, 95, 135, 0.4);
   }
   > canvas {
     width: 100vw;
@@ -179,7 +179,7 @@ h1 {
     color: $paleDark;
     font-weight: 400;
     margin: 0 0;
-    clip-path: inset(-1px -1px -1px -1px);
+    clip-path: inset(-5px -1px -1px -1px);
     transform: translateY(0px);
     transition: clip-path 200ms ease-out, transform 200ms ease-out;
     transition-delay: 400ms;
@@ -189,12 +189,13 @@ h1 {
       width: 100%;
       height: 1px;
       position: absolute;
-      top: -1px;
+      top: -4px;
       left: -1px;
       background: $paleDark;
     }
   }
   .title {
+    position: relative;
     line-height: 40px;
     font-size: 38px;
     font-weight: 700;
@@ -202,6 +203,8 @@ h1 {
     clip-path: inset(-1px -1px -16px -1px);
     transition: transform 800ms cubic-bezier(0.83, 0.01, 0.2, 1),
       clip-path 800ms cubic-bezier(0.83, 0.01, 0.2, 1);
+
+    left: -2px;
     @media (max-width: 560px) {
       font-size: 32px;
       line-height: 36px;
